Bug 239977 - Invisible value in some themes in our custom widget
Summary: Invisible value in some themes in our custom widget
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Cyrille Berger
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-29 15:03 UTC by LukasT
Modified: 2011-04-16 17:47 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
QtCurve 1.0.2 settings (3.02 KB, text/plain)
2010-06-29 10:10 UTC, LukasT
Details
Image showing a progressbar with above stylerc (2.32 KB, image/jpeg)
2010-08-22 16:44 UTC, Michael Leupold
Details

Note You need to log in before you can comment on or make changes to this bug.
Description LukasT 2010-05-29 15:03:39 UTC
Version:           svn trunk (using KDE 4.4.3) 
OS:                Linux

In some themes the value of the slider is invisible.
See http://www.abclinuxu.cz/data/prilohy/6/7/158076-snapshot6-12826.png


Reproducible: Didn't try




OS: Linux (i686) release 2.6.32.9-70.fc12.i686
Compiler: gcc
Comment 1 LukasT 2010-06-29 10:10:33 UTC
Created attachment 48448 [details]
QtCurve 1.0.2 settings

Here is the settings, user has sent it to me. This QtCurve is in Ubuntu.
He claims that the bug is also in actual QtCurve 1.5
Comment 2 Halla Rempt 2010-08-15 16:31:18 UTC
BUGDAY
Comment 3 Michael Leupold 2010-08-22 16:44:59 UTC
Created attachment 50833 [details]
Image showing a progressbar with above stylerc

I can confirm this bug. This actually seems to be a bug with the custom control. This is an image I took of a "kdialog --progressbar" using the qtcurve stylerc provided. As you can see the value is readable here. Seems the widget used for properties doesn't use the same font color everywhere.
Comment 4 Sven Langkamp 2010-09-14 16:42:04 UTC
Fixed with QtCurve 1.6
Comment 5 Cyrille Berger 2011-04-16 17:40:50 UTC
it is actually still happening with qtcurve 1.8 (and pretty much all settings), while progress bar works correctly.
Comment 6 Cyrille Berger 2011-04-16 17:47:18 UTC
Git commit 936e7cc3e0494ab5366635ea8279434b357af765 by Cyrille Berger.
Committed on 16/04/2011 at 17:53.
Pushed by berger into branch 'master'.

Fix: drawing of the text on a the slider when using QtCurve

BUG:239977

M  +2    -0    krita/ui/widgets/kis_slider_spin_box.cpp     

http://commits.kde.org/calligra/936e7cc3e0494ab5366635ea8279434b357af765