Fix: drawing of the text on a the slider when using QtCurve

BUG:239977